添加user模型，无管理员账号时自动创建管理员账号

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -10,7 +10,8 @@
   "keywords": [],
   "author": "",
   "dependencies": {
-    "@koa/router": "10.1.1"
+    "@koa/router": "10.1.1",
+    "sqlite3": "5.0.2"
   },
   "devDependencies": {
     "koa": "2.13.4",
