--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -8,10 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "element-plus": "2.1.8",
+    "vue": "3.2.31"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.0",
-    "vite": "^2.9.0"
+    "@vitejs/plugin-vue": "2.3.1",
+    "less": "4.1.2",
+    "vite": "2.9.1"
   }
 }
