--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "element-plus": "2.1.8",
-    "vue": "3.2.31"
+    "vue": "3.2.31",
+    "vue-router": "4.0.14"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "2.3.1",
